<?xml version="1.0"?>
<package>
  <name>nagel_laminar</name>
  <version>0.0.0</version>
  <description>
  Launch file and accessories for running behavior experiments in the 2D
  laminar-flow arenas designed by Kathy Nagel's lab.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="toconnel@caltech.edu">Tom O'Connell</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv3</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/test</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->

  <build_depend>message_generation</build_depend>

  <!-- TODO convert run_depend to exec_depend to conform to version 2
       package.xml. may need to convert other things too. -->
  <run_depend>message_runtime</run_depend> -->

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- TODO add image_proc stuff? or will the camera driver cause that to be
       installed anyway? -->
  <run_depend>pointgrey_camera_driver</run_depend>
  <run_depend>multi_tracker</run_depend>
  <run_depend>metatools</run_depend>
  <run_depend>stimuli</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
